Temp fix for dereference problems